--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-CONNECTURL=  'mongodb+srv://mern:mern@cluster0.x4bs7.mongodb.net/mern?retryWrites=true&w=majority'
+CONNECTURL=  'mongodb+srv://mern:mern@cluster0.x4bs7.mongodb.net/sample_restaurants?retryWrites=true&w=majority'
 PORT = 5000
-RESTRIVIES = 'mern'
+RESTRIVIES = 'sample_restaurants'
 POOLSIZE = 50;
 WTIMEOUT = 2500
